# pinrule

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CLAUDE.zh.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  HANDOFF.md  HOOK_PROTOCOL_RESEARCH.md  LICENSE  PRD.md  README.md  README.zh.md  RULES_REDESIGN_PROPOSAL.md  SECURITY.md  SECURITY.zh.md  pyproject.toml  whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.zh.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh.md  feature_request.md  feature_request.zh.md
.github/workflows/: ci.yml
data/: config.example.json  config.example.yaml  rules.dev.example.json  rules.dev.example.yaml  rules.dev.example.zh.json  rules.dev.example.zh.yaml  rules.dev.minimal.example.json  rules.dev.minimal.example.yaml  rules.dev.minimal.example.zh.json  rules.dev.minimal.example.zh.yaml  sticky.dev.example.yaml  sticky.example.yaml
data/locales/: en.json  en.yaml  zh.json  zh.yaml
data/signals/agent_saturation/: en.txt  zh.txt
data/signals/completion_words/: en.txt  zh.txt
data/signals/explicit_handoff/: en.txt  zh.txt
data/signals/push_signals/: en.py  en.yaml  zh.py  zh.yaml
data/signals/stop_hints/: en.txt  zh.txt
data/signals/user_stop_hints/: en.txt  zh.txt
data/signals/weak_claims/: en.txt  zh.txt
docs/: ARCHITECTURE.md  ARCHITECTURE.zh.md  CODEX_BACKEND.md  CODEX_BACKEND.zh.md  EVALUATION.md  EVALUATION.zh.md  HANDOFF.md  HANDOFF.zh.md  HOOK_CONFIGURATION_GUIDE.md  HOOK_CONFIGURATION_GUIDE.zh.md  HOOK_PROTOCOL_RESEARCH.md  PRD.en.md  PRD.md  PRD.zh.md  REFACTOR_PLAN_RULE_AND_I18N.md  REFACTOR_PLAN_RULE_AND_I18N.zh.md  RULES_REDESIGN_PROPOSAL.md  RULES_REDESIGN_PROPOSAL.zh.md  V0_6_0_PLAN.md  V0_6_0_PLAN.zh.md
karma/: __init__.py  __main__.py  cli.py  config.py  cursor_rules_sync.py  cursor_visibility.py  locale_detect.py  model_threshold.py  notify.py  paths.py  rule.py  session_state.py  signals.py  skill_packaging.py  sticky.py  violations.py
karma/backends/: HOWTO.md  HOWTO.zh.md  __init__.py  _base.py  _json_hooks.py  claude_code.py  codex.py  cursor.py  gemini_cli.py  native_capabilities.py  protocol_adapter.py
karma/checks/: __init__.py  _types.py  bypass_karma.py  chinese_plain.py  common.py  description_context.py  evidence.py  keep_pushing.py  long_term.py  non_blocking.py  read_first.py  testset.py
karma/hooks/: _payload.py  _tool_gate.py  _transcript.py  after_agent_response.py  before_mcp_execution.py  before_read_file.py  before_shell_execution.py  post_compact.py  post_response.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
pinrule/: __init__.py  __main__.py  _io_encoding.py  cli.py  config.py  cursor_rules_sync.py  cursor_transcript_doctor.py  cursor_visibility.py  i18n.py  locale_detect.py  model_threshold.py  notify.py  paths.py  rule.py  session_state.py  signals.py  violations.py
pinrule/backends/: HOWTO.md  HOWTO.zh.md  __init__.py  _base.py  _json_hooks.py  claude_code.py  codex.py  cursor.py  hermes.py  native_capabilities.py  protocol_adapter.py
pinrule/checks/: __init__.py  _types.py  bypass_pinrule.py  chinese_plain.py  common.py  description_context.py  evidence.py  keep_pushing.py  long_term.py  non_blocking.py  read_first.py  testset.py
pinrule/hooks/: _payload.py  _tool_gate.py  after_agent_response.py  before_mcp_execution.py  before_read_file.py  before_shell_execution.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
scripts/: cursor-install-local.sh  demo-script.sh  measure_perf.py  record-demo.sh  regenerate-demo-svg.sh  release-finalize.sh  release.sh  verify-installed.sh
scripts/demo-fixtures/: rules-en.yaml  rules-zh.yaml  short-term-talk-en.jsonl  short-term-talk.jsonl  silent-stop-en.jsonl  silent-stop.jsonl
skills/karma/: SKILL.md
skills/pinrule/: SKILL.md
tests/: conftest.py  test_backends.py  test_bypass_karma.py  test_bypass_pinrule.py  test_check_fp_fixes_v0_16_13.py  test_check_rule_id_propagation.py  test_checks.py  test_cli.py  test_codex_backend.py  test_compact_hooks.py  test_config.py  test_config_defaults.py  test_cursor_native_hooks.py  test_cursor_rules_sync.py  test_cursor_user_prompt_inject.py  test_cursor_visibility.py  test_description_context.py  test_false_negative_regression.py  test_hermes_backend.py  test_hooks.py  test_i18n.py  test_keep_pushing.py  test_locale_detect.py  test_model_threshold.py  test_no_sticky_in_user_facing.py  test_notify.py  test_paths.py  test_payload.py  test_post_tool_use_reinject.py  test_pre_tool_use.py  test_protocol_adapter.py  test_rule_format.py  test_rule_import_pack.py  test_rule_schema.py  test_run_checks.py  test_session_state.py  test_session_state_atomic.py  test_signals.py  test_skill_content.py  test_sticky.py  (+3 more)
tests/contract/: test_backend_contract.py
