[project]
name = "pinrule"
version = "0.16.5"
description = "Sticky core directional preferences for Claude / Codex / Cursor — keep Agent on track in long sessions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jhz" }]
license = { text = "MIT" }
keywords = ["claude", "codex", "cursor", "agent", "hook", "rules", "preferences", "dogfooding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    # Windows 兼容未真测（wrapper 用 Unix shebang `#!python`，Windows shell
    # 不识别），暂不声明支持。WSL 下可工作。
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jhaizhou-ops/pinrule"
Repository = "https://github.com/jhaizhou-ops/pinrule"
Issues = "https://github.com/jhaizhou-ops/pinrule/issues"
Changelog = "https://github.com/jhaizhou-ops/pinrule/blob/main/CHANGELOG.md"

[project.scripts]
pinrule = "pinrule.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "vulture>=2.14",   # 死代码扫描 — 跑 `vulture pinrule/ --min-confidence 60`
    "mypy>=1.10",      # 静态类型检查 — 跑 `mypy pinrule/`（ignore_missing_imports 已配 [tool.mypy]）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pinrule"]
artifacts = ["data/*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
"data/rules.dev.example.yaml" = "data/rules.dev.example.yaml"
"data/rules.dev.example.zh.yaml" = "data/rules.dev.example.zh.yaml"
"data/rules.dev.minimal.example.yaml" = "data/rules.dev.minimal.example.yaml"
"data/rules.dev.minimal.example.zh.yaml" = "data/rules.dev.minimal.example.zh.yaml"
"data/locales/en.yaml" = "data/locales/en.yaml"
"data/locales/zh.yaml" = "data/locales/zh.yaml"
"data/config.example.yaml" = "data/config.example.yaml"
# v0.9.15 critical fix (caught by GPT-5.5 full-repo review): data/signals/ 整个
# 目录之前漏 force-include. signals.py:40 固定读 _REPO_ROOT/data/signals，
# 源码树测试 OK 但 pip install 后 wheel 缺 → compile_alternation() 全 never-match
# → evidence / keep_pushing / non_blocking 等 keyword-fallback layer 真失效.
# 影响所有 pip install 用户（含 Claude 主流场景）— 比 cross-backend bug
# 还紧急. 用整目录 force-include 不是 globbing，避免漏新加的 signal type.
"data/signals" = "data/signals"
"skills/pinrule/SKILL.md" = "skills/pinrule/SKILL.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# PyYAML 没官方 stub（types-PyYAML 是社区维护），pinrule 不引入额外 stub 依赖
ignore_missing_imports = true
