[project]
name = "pinrule"
version = "0.18.2"
description = "Pin the 5-10 rules your AI must not drift from during long tasks — Claude / Codex / Cursor, pure engineering, zero LLM, zero runtime deps, ~50-70ms hook latency"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jhz" }]
license = { text = "MIT" }
keywords = ["claude", "codex", "cursor", "agent", "hook", "rules", "preferences", "pinrule", "claude-code", "agent-rules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    # v0.17.0: 0 runtime deps — 砍 PyYAML, 全切 JSON (Python 标准库).
    # v0.16.17: Windows native 支持 — hook command `python.exe wrapper.py`.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
# v0.17.0: 0 runtime deps. JSON / importlib 都是 Python 标准库.
dependencies = []

[project.urls]
Homepage = "https://github.com/jhaizhou-ops/pinrule"
Repository = "https://github.com/jhaizhou-ops/pinrule"
Issues = "https://github.com/jhaizhou-ops/pinrule/issues"
Changelog = "https://github.com/jhaizhou-ops/pinrule/blob/main/CHANGELOG.md"

[project.scripts]
pinrule = "pinrule.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "vulture>=2.14",   # 死代码扫描 — 跑 `vulture pinrule/ --min-confidence 60`
    "mypy>=1.10",      # 静态类型检查 — 跑 `mypy pinrule/`（ignore_missing_imports 已配 [tool.mypy]）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pinrule"]
# v0.17.0 起所有 data 资产用 force-include 显式列, 不再需要 artifacts glob

[tool.hatch.build.targets.wheel.force-include]
"data/rules.dev.example.json" = "data/rules.dev.example.json"
"data/rules.dev.example.zh.json" = "data/rules.dev.example.zh.json"
"data/rules.dev.minimal.example.json" = "data/rules.dev.minimal.example.json"
"data/rules.dev.minimal.example.zh.json" = "data/rules.dev.minimal.example.zh.json"
"data/locales/en.json" = "data/locales/en.json"
"data/locales/zh.json" = "data/locales/zh.json"
"data/config.example.json" = "data/config.example.json"
# v0.9.15 critical fix (caught by GPT-5.5 full-repo review): data/signals/ 整个
# 目录之前漏 force-include. signals.py:40 固定读 _REPO_ROOT/data/signals，
# 源码树测试 OK 但 pip install 后 wheel 缺 → compile_alternation() 全 never-match
# → evidence / keep_pushing / non_blocking 等 keyword-fallback layer 真失效.
# 影响所有 pip install 用户（含 Claude 主流场景）— 比 cross-backend bug
# 还紧急. 用整目录 force-include 不是 globbing，避免漏新加的 signal type.
"data/signals" = "data/signals"
"skills/pinrule/SKILL.md" = "skills/pinrule/SKILL.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# pinrule v0.17.0+ 0 runtime deps. 这条防御性 ignore 给 dev 工具
# (pytest 等) 偶尔缺 stub 兜底, 不影响生产代码类型检查严格度.
ignore_missing_imports = true
